--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "bootstrap": "^4.1.0",
+    "bootstrap-datetime-picker": "^2.4.4",
     "connect-mongo": "^2.0.1",
     "cookie-parser": "~1.4.3",
     "cropperjs": "^1.3.5",
@@ -23,6 +24,7 @@
     "http-errors": "~1.6.2",
     "jquery": "^3.3.1",
     "jsonwebtoken": "^8.2.1",
+    "moment": "^2.22.1",
     "mongoose": "^5.0.15",
     "morgan": "~1.9.0",
     "pug": "2.0.0-beta11",
