--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "moment": "^2.22.1",
     "mongoose": "^5.0.15",
     "morgan": "~1.9.0",
+    "platform": "^1.3.5",
     "pug": "2.0.0-beta11",
     "read-chunk": "^2.1.0",
     "sharp": "^0.20.1"
