--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "platform": "^1.3.5",
     "pug": "2.0.0-beta11",
     "read-chunk": "^2.1.0",
-    "sharp": "^0.20.1"
+    "sharp": "^0.20.1",
+    "socket.io": "^2.1.0"
   }
 }
