--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "~4.16.0",
     "express-flash": "0.0.2",
     "express-session": "^1.15.6",
+    "express-socket.io-session": "^1.3.3",
     "express-validator": "^5.1.2",
     "file-type": "^7.6.0",
     "font-awesome": "^4.7.0",
