--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "font-awesome": "^4.7.0",
     "formidable": "^1.2.1",
     "http-errors": "~1.6.2",
+    "i18n": "^0.8.3",
     "jquery": "^3.3.1",
     "jsonwebtoken": "^8.2.1",
     "moment": "^2.22.1",
     "mongoose": "^5.0.15",
     "morgan": "~1.9.0",
+    "nodemailer": "^4.6.4",
     "platform": "^1.3.5",
     "pug": "2.0.0-beta11",
     "read-chunk": "^2.1.0",
