--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "file-type": "^7.6.0",
     "font-awesome": "^4.7.0",
     "formidable": "^1.2.1",
+    "froala-editor": "^2.8.1",
     "http-errors": "~1.6.2",
     "i18n": "^0.8.3",
     "jquery": "^3.3.1",
@@ -34,6 +35,7 @@
     "pug": "2.0.0-beta11",
     "read-chunk": "^2.1.0",
     "sharp": "^0.20.1",
-    "socket.io": "^2.1.0"
+    "socket.io": "^2.1.0",
+    "wysiwyg-editor-node-sdk": "^2.3.4"
   }
 }
