--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "set HTTPS=true&&nodemon ./bin/www"
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
@@ -31,6 +31,9 @@
     "mongoose": "^5.0.15",
     "morgan": "~1.9.0",
     "nodemailer": "^4.6.4",
+    "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
+    "passport-google-oauth": "^1.0.0",
     "platform": "^1.3.5",
     "pug": "2.0.0-beta11",
     "read-chunk": "^2.1.0",
