--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.1.0",
     "bootstrap-chosen": "^1.4.2",
     "bootstrap-datetime-picker": "^2.4.4",
+    "bootstrap-table": "^1.12.1",
     "connect-mongo": "^2.0.1",
     "cookie-parser": "~1.4.3",
     "cropperjs": "^1.3.5",
@@ -41,6 +42,7 @@
     "read-chunk": "^2.1.0",
     "sharp": "^0.20.4",
     "socket.io": "^2.1.0",
-    "wysiwyg-editor-node-sdk": "^2.3.4"
+    "wysiwyg-editor-node-sdk": "^2.3.4",
+    "x-editable": "^1.5.1"
   }
 }
