--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "set HTTPS=true&&nodemon ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "async": "^2.6.1",
