--- a/env/.env.example
+++ b/env/.env.example
@@ -3,6 +3,9 @@ DEFAULT_PAGE = 1
 DEFAULT_PAGESIZE = 15
 I18N_LANG = vi
 MONGO_DB = mongodb://localhost:27017/cmsnodejs
+REDIS_HOST = 127.0.0.1
+REDIS_PORT = 6379
+REDIS_CACHE_TIME = 86400
 MEDIA_URL = http://media.cmsnodejs.local
 SECRET = cmsnodejs
 SESSION_EXP = 108000000
