--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "platform": "^1.3.5",
     "pug": "2.0.0-beta11",
     "read-chunk": "^2.1.0",
+    "redis": "^2.8.0",
     "sharp": "^0.20.4",
     "socket.io": "^2.1.0",
+    "socket.io-redis": "^5.2.0",
     "wysiwyg-editor-node-sdk": "^2.3.4",
     "x-editable": "^1.5.1"
   }
