--- a/env/.env.example
+++ b/env/.env.example
@@ -1,6 +1,6 @@
 PORT = 8080
-DEFAULT_PAGE = 1
-DEFAULT_PAGESIZE = 15
+DEFAULT_OFFSET = 0
+DEFAULT_LIMIT = 15
 I18N_LANG = vi
 MONGO_DB = mongodb://localhost:27017/cmsnodejs
 REDIS_HOST = 127.0.0.1
